--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ WEB_PORT=8002
 DATABASE_PORT=3308
 DATABASE_MANAGER_PORT=8602
 APP_PATH_CONTAINER=/var/www/html
+
+######################################### Windows Path ##########################################
+# A fix for Windows users, to ensure the application path works
+COMPOSE_CONVERT_WINDOWS_PATHS=1
